abstract class Mediator {
  void notify(Object sender, String event);
}